pulling email address to env variable

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
-GMAIL_USER=
-GMAIL_PASSWORD=
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_ADDRESS=
 ERROR_RECEIVER_EMAIL=
 PROJECT_ENV=
