--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
-EMAIL_USER=
-EMAIL_PASSWORD=
-EMAIL_ADDRESS=
-ERROR_RECEIVER_EMAIL=
+
+FEEDBACK_SMTP_AUTH_USER=
+FEEDBACK_SMTP_AUTH_PASSWORD=
+FEEDBACK_SMTP_ADDRESS=
+
+FEEDBACK_FROM_EMAIL=
+FEEDBACK_TO_EMAIL=
+
 PROJECT_ENV=
