added email notifications throughout scraping process

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,13 @@ FEEDBACK_SMTP_ADDRESS=
 
 FEEDBACK_FROM_EMAIL=
 FEEDBACK_TO_EMAIL=
+FEEDBACK_SUCCESS_EMAIL=
+
+EMAIL_SUBJECT_PREFIX='Place.Ge Scraper'
+EMAIL_PROCESSED_SO_FAR_TRIGGER=500
+
+MAX_PAGE_LIMIT_FOR_IDS=500
+
+GITHUB_DATA_URL='https://github.com/ForSetGeorgia/Scraper---Place.ge---Data-Files/'
 
 PROJECT_ENV=
