created more env variables

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,29 @@ FEEDBACK_TO_EMAIL=
 FEEDBACK_SUCCESS_EMAIL=
 
 EMAIL_SUBJECT_PREFIX='Place.Ge Scraper'
+# when scraping ads, how many ads should be scraped
+# before a progress update email is sent
 EMAIL_PROCESSED_SO_FAR_TRIGGER=500
 
-MAX_PAGE_LIMIT_FOR_IDS=500
+# url to get the list of ads to scrape
+URL_IDS="https://place.ge/ge/ads/page:[page_num]?limit=[limit]&object_type=all&currency_id=2&mode=list&order_by=date"
+# set the limit for how many ads to get at a time when collecting ids
+# - the site is old and does not do well with high numbers (returns errors)
+#   so this number is constantly changing
+MAX_PAGE_LIMIT_FOR_IDS=400
+# url to get the ad
+URL_AD="https://place.ge/en/ads/view/"
+# number of concurrent hydra connections to run at a time
+# - they seem to monitor the site
+#   so we do not want to make it too large
+#   resulting getting blocked
+HYDRA_CONCURRENT_CONNECTIONS=10
+# the api url to get proxy IP addresses
+PROXY_API_URL="https://www.proxy-list.download/api/v1/get?type=http&anon=elite&country="
 
+
+# url to the github data repo
 GITHUB_DATA_URL='https://github.com/ForSetGeorgia/Scraper---Place.ge---Data-Files/'
 
+# set it to 'production' on the server
 PROJECT_ENV=
