add env flag to indciate if ad errors should be re-processed

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,9 @@ URL_AD="https://place.ge/en/ads/view/"
 HYDRA_CONCURRENT_CONNECTIONS=10
 # the api url to get proxy IP addresses
 PROXY_API_URL="https://www.proxy-list.download/api/v1/get?type=http&anon=elite&country="
-
+# if there are ads with errors that were not scrape,
+# indicate if those ads should be tried again
+REPROCESS_ADS_WITH_ERRORS=true
 
 # url to the github data repo
 GITHUB_DATA_URL='https://github.com/ForSetGeorgia/Scraper---Place.ge---Data-Files/'
